[gd_scene load_steps=3 format=3 uid="uid://bcrcs6wvwk3qg"]

[ext_resource type="Script" path="res://src/_reusable_stuff/features/item_system/nodes/item_system_ui_item_slot.gd" id="1_bsj02"]
[ext_resource type="Texture2D" uid="uid://dd1xtjsfkr7db" path="res://src/_reusable_stuff/features/item_system/examples/resources/items/gold.png" id="2_i8f22"]

[node name="ItemSystem_UI_ItemSlot" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsj02")

[node name="Slot_Parent" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Slot_Parent"]
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="Slot_Parent/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_i8f22")
stretch_mode = 5

[node name="ItemName" type="Label" parent="Slot_Parent/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Gold"
horizontal_alignment = 1

[node name="ItemQuantity" type="Label" parent="Slot_Parent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "12"
horizontal_alignment = 2

[node name="Button" type="Button" parent="Slot_Parent"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
